--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
           design and do their best to put it in code. He goes over and beyond and
           transforms ART into PIXELS - without a glitch, every time.
         </p>
-        
+        <div class="user">
+            <img
+              src="https://randomuser.me/api/portraits/women/46.jpg"
+              alt="user"
+              class="user-image"
+            />
+            <div class="user-details">
+              <h4 class="username">Miyah Myles</h4>
+              <p class="role">Marketing</p>
+            </div>
+          </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
