this styling for fa-quote

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     crossorigin="anonymous"
   />
     <link rel="stylesheet" href="style.css">
-    <title>Testimonal box </title>
+    <title>Testimonial box </title>
 </head>
 <body>
 
